Fix scrollbar showing up unnecessarily

--- a/client/src/components/Form.css
+++ b/client/src/components/Form.css
@@ -122,7 +122,7 @@ h1 {
 .totalcount {
   display: flex;
   justify-content: center;
-  margin-top: 25px;
+  margin-top: 18px;
 }
 
 .totalcount input {
